--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Me Contacter</title>
-    <link rel="stylesheet" href="style.css"> <!-- Lien vers la feuille CSS -->
+    <link rel="stylesheet" href="Style.css"> <!-- Lien vers la feuille CSS -->
 </head>
 <body>
 
